# Laba_OOP_3

./: CMakeLists.txt  figure.h  hexagon.cpp  hexagon.h  main.cpp  octagon.cpp  pentagon.cpp  pentagon.h  tests.cpp
